test/e2e/setup/manifests/vote/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-frontend
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vote-frontend
  template:    
    metadata:
      labels:
        app.kubernetes.io/name: vote-frontend
    spec:
      imagePullSecrets:
        - name: zot-pull
      containers:
        - name: vote-frontend
          image: zot.z65.nl/voter/frontend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"            
---
apiVersion: v1
kind: Service
metadata:
  name: vote-frontend
  namespace: vote
spec:
  selector:
    app.kubernetes.io/name: vote-frontend
  ports:
    - name: http
      port: 8080
      targetPort: http

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-auth-service
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vote-auth-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vote-auth-service
    spec:
      serviceAccountName: auth-service
      imagePullSecrets:
        - name: zot-pull
      containers:
        - name: auth-service
          image: zot.z65.nl/voter/auth-service:latest
          imagePullPolicy: Always
          env:
            - name: FORWARD_SA
              value: quiz-access
            - name: FORWARD_SA_NAMESPACE
              value: vote
            - name: COOKIE_SECURE
              value: "true"
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: vote
spec:
  selector:
    app.kubernetes.io/name: vote-auth-service
  ports:
    - name: http
      port: 8080
      targetPort: http
