test/e2e/setup/manifests/vote/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-public
  namespace: vote
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: cloudflared-public-ratelimit@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: vote.reversegitops.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: podinfo
            port:
              number: 80
