test/e2e/setup/manifests/vote/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vote-public
  namespace: vote
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`vote.reversegitops.dev`) && PathPrefix(`/`)
    kind: Rule
    middlewares:
    - name: ratelimit
      namespace: cloudflared-public
    services:
    - name: podinfo
      port: 80
