test/e2e/setup/manifests/vote/podinfo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
  namespace: vote
  labels:
    app.kubernetes.io/name: podinfo
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: podinfo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: podinfo
    spec:
      containers:
      - name: podinfo
        image: ghcr.io/stefanprodan/podinfo:6.11.1
        env:
        - name: PODINFO_UI_MESSAGE
          value: hello from simon
        ports:
        - name: http
          containerPort: 9898
        readinessProbe:
          httpGet:
            path: /readyz
            port: http
          initialDelaySeconds: 3
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  namespace: vote
  labels:
    app.kubernetes.io/name: podinfo
spec:
  selector:
    app.kubernetes.io/name: podinfo
  ports:
  - name: http
    port: 80
    targetPort: http
